syntax = "proto3";

option csharp_namespace = "ProfileMicroService";

service AddressGrpcService {
	rpc GetUserDefaultAddress (AddressRequest) returns (AddressResponse);
}

message AddressRequest{
	int32 userId = 1;
}

message AddressResponse{
	int32 addressId = 1;
}
